--- a/src/components/IntroSection.module.css
+++ b/src/components/IntroSection.module.css
@@ -1,6 +1,6 @@
 .intro {
   position: relative;
-  z-index: 1;
+  z-index: 2;
   background: linear-gradient(180deg, #b8ced3 0%, #bed9d2 50%, #c3e2d1 100%);
   top: 420px;
   opacity: 0;
